# info-gov-war

./: README.md  config.yaml  personalisation_vs_reidentification.ipynb  pyproject.toml  simulation.ipynb
notebooks/: exploration.ipynb  outcome_identifiability.ipynb
src/: config.py  generate.py  k_anonymity.py  modelling.py  mondrian_anonymiser.py  pipeline.py  pipeline_discretisation.py  pipeline_mondrian.py
src/generate/: __init__.py  __main__.py  data.py  discretise.py  mondrian.py  plotting.py
tests/: test_discretization.py  test_generate.py  test_identifiability.py  test_outcome_model.py
